--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
 <li><a href="http://62.210.209.113/?fromuid=73855" target="_blank">天空论坛</a></li>
 <li><a href="http://www.sineed18.info/?fromuid=72524" target="_blank">任我睇</a></li>
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
-<li><a href="http://dear.gq/" target="_blank">蓝色小导航</a></li>
 <li><a href="http://www.hdp2p.net/" target="_blank">99爱唯工厂</a></li>
 <li><a href="http://166.62.61.163/?fromuid=16201" target="_blank">涩呢妹·SNM</a></li>
 <li><a href="http://avnrw.com/" target="_blank">AV男人网</a></li>
@@ -212,16 +211,17 @@
 <li><a href="http://avlu99.com/" target="_blank">撸啊撸</a></li>
 <li><a href="http://www.99zzpp.com/" target="_blank">99自拍</a></li>
 <li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
+<li><a href="http://www.db66.cc/" target="_blank">AV在线视频</a></li>
+<li><a href="http://www.912hh.com/" target="_blank">就要爱912</a></li>
 <li><a href="http://qisevd.com/" target="_blank">奇色视频</a></li>
 <li><a href="http://www.bensexo.com/" target="_blank">本色视频</a></li>
 <li><a href="http://www.yese1024.com/" target="_blank">夜色视频</a></li>
 <li><a href="http://www.chunsesp.com/" target="_blank">春色视频</a></li>
 <li><a href="http://www.henlupao.com/" target="_blank">狠撸炮</a></li>
 <li><a href="http://www.avlezi.com/" target="_blank">AV乐子</a></li>
-<li><a href="http://www.yunav1.xyz/" target="_blank">AV云</a></li>
 <li><a href="http://www.av0769.com/" target="_blank">东莞av</a></li>
 <li><a href="http://souav111.com/" target="_blank">搜AV视频</a></li>
-<li><a href="http://www.rq66.info/" target="_blank">人妻视频</a></li>
+<li><a href="http://www.yunav1.xyz/" target="_blank">AV云</a></li>
 <li><a href="http://www.meizyw.com/" target="_blank">mm资源网</a></li>
 <li><a href="http://www.avtb7.com/" target="_blank">AV淘宝</a></li>
 <li><a href="http://video169.com/" target="_blank">Sex169影城</a></li>
@@ -241,7 +241,6 @@
 <li><a href="http://gaob003.com/" target="_blank">gaob</a></li>
 <li><a href="http://www.36gao.com/" target="_blank">haodiaose</a></li>
 <li><a href="http://vod23.com/" target="_blank">VOD视屏</a></li>
-<li><a href="http://8833hao.com/" target="_blank">995hao</a></li>
 <li><a href="http://8833hao.com/" target="_blank">995hao</a></li>
 <li><a href="http://www.vid999.com/" target="_blank">vid999</a></li>
 <li><a href="http://www.600zyz.com/" target="_blank">97资源站</a></li>
@@ -322,6 +321,7 @@
 <li><a href="http://www.jmetube.com/" target="_blank">JMETube</a></li>
 <li><a href="http://www.tokyoporn.com/" target="_blank">TokyoPorn</a></li>
 <li><a href="http://muryouav-house.com/" target="_blank">無料ＡＶハウス</a></li>
+<li><a href="http://www.adult-sex-porn-tv.com/" target="_blank">Adult TV</a></li>
 				    </ul>
 		</div>
 		</div>
@@ -682,8 +682,8 @@
 <li><a href="http://www.torrentfunk.com/" target="_blank">TorrentFunk</a></li>
 <li><a href="http://www.btmon.com/" target="_blank">BTMon</a></li>
 <li><a href="http://www.tokyotosho.info/" target="_blank">Tokyo Toshokan</a></li>
-<li><a href="http://bbs.meetav.com/index.php" target="_blank">MeetAV BBS</a></li>
 <li><a href="http://torrent.sex169.biz/" target="_blank">SEX169 種子站</a></li>
+<li><a href="http://22ttbt.com/" target="_blank">图图BT</a></li>
 <li><a href="http://bt.gg/" target="_blank">短磁链</a></li>
 <li><a href="https://btdb.in/" target="_blank">BTDB</a></li>
 <li><a href="http://www.cilibaba.com/" target="_blank">CiLiBaBa</a></li>
