--- a/ad.html
+++ b/ad.html
@@ -59,7 +59,7 @@ var duoshuoQuery = {short_name:"1588"};
 																																																									<p align="center">
 	禁止未满18周岁的访客访问本站，為了你的学业与健康请勿瀏览本站<br>
 	我们立足於美利坚合眾国，对全球华人服务，受北美法律保护。未经授权禁止复製或建立镜像<br>
-	&copy; 2016 All Rights Reserved. <font color="#0080FF">蓝色小导航 - 草榴导航 - 各大网站最新地址 </font>版权所有 - <font color="#FF0000"><script language="javascript" type="text/javascript" src="http://js.users.51.la/17856605.js"></script>
+	&copy; 2016 All Rights Reserved. <font color="#0080FF">蓝色小导航 - 草榴小导航 - 各大网站最新地址 </font>版权所有 - <font color="#FF0000"><script language="javascript" type="text/javascript" src="http://js.users.51.la/17856605.js"></script>
 <noscript><a href="http://www.51.la/?17856605" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/17856605.asp" style="border:none" /></a></noscript></font><br>
 	</p>
 </div></body>
