--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset="utf-8"/>
-<title>蓝色小导航 - 草榴导航 - 各大网站最新地址</title>
+<title>蓝色小导航 - 草榴小导航 - 各大网站最新地址</title>
 <meta name="keywords" content="蓝色导航,蓝色小导航,草榴导航,福利导航,1024核工厂最新地址,福利导航,xiao77,bt爱城,爱唯侦查,1024基地手机看电影,各大网站地址发布站"/>
 <meta name="description" content="蓝色导航,草榴导航,蓝色小导航,福利导航,xiao77,bt爱城,爱唯侦查,1024基地手机看电影,各大网站地址发布站。"/>
 <meta name="viewport" content="width=device-width"/>
@@ -62,12 +62,13 @@
 <li><a href="http://www.sineed18.info/?fromuid=72524" target="_blank">任我睇</a></li>
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
 <li><a href="http://www.hdp2p.net/" target="_blank">99爱唯工厂</a></li>
+<li><a href="http://www.gaohaolu.ml/" target="_blank">高好撸</a></li>
 <li><a href="http://166.62.61.163/?fromuid=16201" target="_blank">涩呢妹·SNM</a></li>
 <li><a href="http://avnrw.com/" target="_blank">AV男人网</a></li>
 <li><a href="http://162.211.95.61/bbs/?fromuid=715" target="_blank">老王社区</a></li>
 <li><a href="http://97kaixin.com/" target="_blank">97开心</a></li>
-<li><a href="http://www.gaohaolu.ml/" target="_blank">高好撸</a></li>
 <li><a href="http://www.laikanmei.top/" target="_blank">来看妹论坛</a></li>
+<li><a href="http://fuli3758.com/" target="_blank">福利社小说</a></li>
 <li><a href="http://6ni.info/forum.php" target="_blank">365论坛</a></li>
 <li><a href="http://www.18p2p.com/forum/index.php" target="_blank">18p2p</a></li>
 <li><a href="http://www.sewangchao3.com/" target="_blank">夜色王朝</a></li>
@@ -98,7 +99,6 @@
 <li><a href="http://theporndude.com/" target="_blank">The Porn Dude</a></li>
 <li><a href="http://namethatporn.com/" target="_blank">NameThatPorn</a></li>
 <li><a href="http://www.piring.com/bbs/tcn/?fromuid=2061069" target="_blank">痴汉俱乐部</a></li>
-<li><a href="http://www.7qs.info/" target="_blank">奇涩社区</a></li>
 <li><a href="http://108.171.242.244/" target="_blank">MyHd1080</a></li>
 <li><a href="http://w1.vz05.biz/pw/" target="_blank">1024核工厂</a></li>
 <li><a href="http://redditlist.com/nsfw" target="_blank">redditlist</a></li>
@@ -144,7 +144,7 @@
 <li><a href="http://tmdkao.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
 <li><a href="http://cl.oaiyr.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
 <li><a href="http://c6.jekr.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区6</a></li>
-<li><a href="http://cl.gfhyu.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区7</a></li>
+<li><a href="http://cl.opeot.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区7</a></li>
 				    </ul>
 		</div>
 		</div>
@@ -155,33 +155,33 @@
 		<div class="linkl">
 		<ul>
                             <li><a href="https://www.doufuli.com/" target="_blank">豆福导航</a></li>
+                            <li><a href="http://www.soavdh.com/" target="_blank">搜AV导航</a></li>
+                            <li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
+                            <li><a href="http://www.3031177.com/" target="_blank">通幽福利导航</a></li>
+                            <li><a href="http://www.hhzjzz.com/" target="_blank">蜜汁福利导航</a></li>
+                            <li><a href="http://www.xionzhan.com/" target="_blank">你懂得福利导航</a></li>
+                            <li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
+                            <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
+                            <li><a href="http://www.zhaoavdh.com" target="_blank">找AV导航</a></li>
+                            <li><a href="http://www.500dh.com/" target="_blank">500导航</a></li>
                             <li><a href="http://www.seevdo18.ga/" target="_blank">大人导航</a></li>
                             <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
                             <li><a href="http://ailovedh.com/" target="_blank">大爱导航</a></li>
-                            <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
-                            <li><a href="http://www.500dh.com/" target="_blank">500导航</a></li>
-                            <li><a href="http://www.zhaoavdh.com" target="_blank">找AV导航</a></li>
-                            <li><a href="http://www.soavdh.com/" target="_blank">搜AV导航</a></li>
                             <li><a href="http://www.lw78.cc/" target="_blank">老王福利导航</a></li>
+                            <li><a href="http://www.semmdh.com/" target="_blank">色妹妹导航</a></li>
+                            <li><a href="http://lvjiabai1.info/" target="_blank">绿加白导航</a></li>
                             <li><a href="http://www.avsedh.net/" target="_blank">AV色导航</a></li>
                             <li><a href="http://a4v5.net/" target="_blank">良友导航</a></li>
-                            <li><a href="http://lvjiabai1.info/" target="_blank">绿加白导航</a></li>
-                            <li><a href="http://www.52shl.xyz/" target="_blank">福利射导航</a></li>
-                            <li><a href="http://www.semmdh.com/" target="_blank">色妹妹导航</a></li>
-                            <li><a href="http://www.x5m3.com/" target="_blank">九尾狐导航</a></li>
-							<li><a href="http://nimadaohang.com/" target="_blank">尼玛导航</a></li>
-							<li><a href="http://www.dccwl.com/" target="_blank">色慰导航</a></li>
+                            <li><a href="http://www.dccwl.com/" target="_blank">色慰导航</a></li>
 							<li><a href="http://dh.hfuli.com/" target="_blank">H福利导航</a></li>
 							<li><a href="http://av7111.com" target="_blank">老司机福利导航</a></li>
 							<li><a href="http://www.fulisao.net/" target="_blank">福利嫂宅男导航</a></li>
-							<li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
 							<li><a href="http://www.yikudh.cc/" target="_blank">一库福利导航</a></li>
 							<li><a href="http://www.gvgvdh.com/" target="_blank">GVGV导航</a></li>
 							<li><a href="http://www.caoluotuo.com/" target="_blank">草骆驼福利导航</a></li>
                             <li><a href="http://avcccc.com/" target="_blank">AVcccc导航</a></li>
                             <li><a href="http://dh.19xa.com/" target="_blank">福利导航</a></li>
                             <li><a href="http://www.fulidg.cc/" target="_blank">福利帝国導航</a></li>
-							<li><a href="http://74fuli.net/" target="_blank">骑士福利导航</a></li>
 				    </ul>
 		</div>
 		</div>
@@ -199,7 +199,7 @@
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
 <li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
 <li><a href="http://www.yyaiav.com/" target="_blank">夜夜爱AV</a></li>
-<li><a href="http://www.av1800.com/" target="_blank">善解人衣在线</a></li>
+<li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
 <li><a href="http://www.uuszy.com/" target="_blank">悠色资源网</a></li>
 <li><a href="http://v2momo.com/" target="_blank">V2视频</a></li>
 <li><a href="http://d8spad.com/" target="_blank">D8视频</a></li>
@@ -221,6 +221,8 @@
 <li><a href="http://www.avlezi.com/" target="_blank">AV乐子</a></li>
 <li><a href="http://www.av0769.com/" target="_blank">东莞av</a></li>
 <li><a href="http://souav111.com/" target="_blank">搜AV视频</a></li>
+<li><a href="http://www.51luav.com/" target="_blank">51撸AV在线</a></li>
+<li><a href="http://www.avsuo.com/" target="_blank">AVSUO在线</a></li>
 <li><a href="http://www.yunav1.xyz/" target="_blank">AV云</a></li>
 <li><a href="http://www.meizyw.com/" target="_blank">mm资源网</a></li>
 <li><a href="http://www.avtb7.com/" target="_blank">AV淘宝</a></li>
@@ -234,16 +236,20 @@
 <li><a href="http://www.avaotu.com/" target="_blank">凹凸视频</a></li>
 <li><a href="http://www.lu2363.com/" target="_blank">撸尔山</a></li>
 <li><a href="http://hhs03.com/" target="_blank">花和尚</a></li>
+<li><a href="http://qjj22.com/" target="_blank">骑姐姐</a></li>
+<li><a href="http://www.liuliucao.tv/" target="_blank">榴榴草</a></li>
 <li><a href="http://www.zz1200.com/" target="_blank">姐姐要爱</a></li>
 <li><a href="http://www.aikan888.com/" target="_blank">爱看视频</a></li>
 <li><a href="http://aishangvideo.com/" target="_blank">爱上视频</a></li>
 <li><a href="http://caob002.com/" target="_blank">caob</a></li>
 <li><a href="http://gaob003.com/" target="_blank">gaob</a></li>
+<li><a href="http://papapa33.com/" target="_blank">水莓100</a></li>
 <li><a href="http://www.36gao.com/" target="_blank">haodiaose</a></li>
 <li><a href="http://vod23.com/" target="_blank">VOD视屏</a></li>
 <li><a href="http://8833hao.com/" target="_blank">995hao</a></li>
 <li><a href="http://www.vid999.com/" target="_blank">vid999</a></li>
 <li><a href="http://www.600zyz.com/" target="_blank">97资源站</a></li>
+<li><a href="http://www.299gao.com/" target="_blank">妞干网</a></li>
 <li><a href="http://www.avtai.org/" target="_blank">AvTai</a></li>
 <li><a href="http://ixxzy.com/" target="_blank">ixxzy</a></li>
 <li><a href="http://www.youb77.com/" target="_blank">有B吗？</a></li>
@@ -334,6 +340,7 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://198.40.52.155/?fromuid=428789" target="_blank">偷窥客</a></li>
+<li><a href="http://www.ivnext.xyz/" target="_blank">少女写真论坛</a></li>
 <li><a href="http://192.186.31.86/?fromuid=34160" target="_blank">WC俱乐部</a></li>
 <li><a href="http://www.521yw.com/?fromuid=13485" target="_blank">我要原味</a></li>
 <li><a href="http://www.52yuanwei.club/?fromuid=190756" target="_blank">我爱原味网</a></li>
@@ -369,6 +376,8 @@
 		<strong><a name="/8/">动漫ACG</a></strong>
 		<div class="linkl">
 		<ul>
+<li><a href="http://www.blrgfz.com/" target="_blank">邪恶少女漫画</a></li>
+<li><a href="http://www.decask.com/" target="_blank">邪恶漫画吧</a></li>
 <li><a href="http://hentai-d.com/" target="_blank">Hentai-d</a></li>
 <li><a href="http://e-hentai.org/" target="_blank">E-Hentai</a></li>
 <li><a href="http://bbs.north-plus.net/" target="_blank">North Plus</a></li>
@@ -405,6 +414,9 @@
 <li><a href="http://sezhan.net/" target="_blank">微拍视频</a></li>
 <li><a href="http://www.weipaiwang.cc/" target="_blank">微拍网</a></li>
 <li><a href="http://52weipai.net/" target="_blank">我爱微拍网</a></li>
+<li><a href="http://www.weipaifuliw.com/" target="_blank">微拍福利网</a></li>
+<li><a href="http://www.83252525.com/" target="_blank">微拍福利视频</a></li>
+<li><a href="http://www.fulishipin.info/" target="_blank">微拍福利哇卡呀</a></li>
 <li><a href="http://www.98zhubo.com/?fromuid=53" target="_blank">98主播网</a></li>
 <li><a href="http://xftec.com/forum.php?x=2122570" target="_blank">夫妻吧</a></li>
 <li><a href="http://www.137992.com/?fromuid=776852" target="_blank">蝴蝶俱乐部</a></li>
@@ -435,7 +447,8 @@
 <li><a href="http://www.douban.com/group/yaoqingzhuce/" target="_blank">邀请码小组</a></li>
 <li><a href="http://10086.pw/?fromuid=1539" target="_blank">找福利网论坛</a></li>
 <li><a href="http://yidoubi.com/" target="_blank">一逗比</a></li>
-<li><a href="http://52shl.xyz/" target="_blank">福利射</a></li>
+<li><a href="http://www.trqcyx.com/" target="_blank">成人糗事</a></li>
+<li><a href="http://www.yuliyazhu.com/" target="_blank">宅男福利社</a></li>
 <li><a href="http://zhainw.com/" target="_blank">宅男网</a></li>
 <li><a href="https://www.sijihuisuo.club/" target="_blank">司机会所</a></li>
 <li><a href="http://www.puahome.com/" target="_blank">坏男孩</a></li>
@@ -476,6 +489,7 @@
 		<ul>
 <li><a href="http://j9lib.com/cn/" target="_blank">JavLibrary</a></li>
 <li><a href="https://www.javbus.info/" target="_blank">JavBus</a></li>
+<li><a href="http://www.uggdiy.com/" target="_blank">求番号吧</a></li>
 <li><a href="http://www.141jav.com/" target="_blank">141jav</a></li>
 <li><a href="http://mo688.net/" target="_blank">Dioguitar23</a></li>
 <li><a href="http://javarchive.com/" target="_blank">JavArchive</a></li>
@@ -574,6 +588,9 @@
 		<strong><a name="/14/">美图街拍</a></strong>
 		<div class="linkl">
 		<ul>
+<li><a href="http://www.bzjkzc.com/" target="_blank">福利gif出处</a></li>
+<li><a href="http://www.bvfpei.com/" target="_blank">邪恶GIF</a></li>
+<li><a href="http://www.nucvrj.com/" target="_blank">美女生活照</a></li>
 <li><a href="http://www.lu46.com/?fromuid=82145" target="_blank">街拍帮</a></li>
 <li><a href="http://www.jp95.com/?fromuid=672975" target="_blank">街拍第一站</a></li>
 <li><a href="http://www.kacajp.com/?fromuid=12755" target="_blank">喀嚓街拍网</a></li>
@@ -582,7 +599,6 @@
 <li><a href="http://www.9gty.net/forum.php" target="_blank">九个太阳</a></li>
 <li><a href="http://www.sexinart.net/" target="_blank">情涩艺术</a></li>
 <li><a href="http://www.eroti-cart.com/" target="_blank">Erotic Art</a></li>
-<li><a href="http://www.wutushe.top/" target="_blank">污图社</a></li>
 <li><a href="http://www.mm131.com/" target="_blank">MM131</a></li>
 <li><a href="http://jigadori.fkoji.com/" target="_blank">Twitter美女</a></li>
 <li><a href="http://www.dbmeinv.com/" target="_blank">豆瓣美女</a></li>
@@ -742,7 +758,7 @@
 																																																									<p align="center">
 	禁止未满18周岁的访客访问本站，為了你的学业与健康请勿瀏览本站<br>
 	我们立足於美利坚合眾国，对全球华人服务，受北美法律保护。未经授权禁止复製或建立镜像<br>
-	&copy; 2016 All Rights Reserved. <font color="#0080FF">蓝色小导航 - 草榴导航 - 各大网站最新地址 </font>版权所有 - <font color="#FF0000"><script language="javascript" type="text/javascript" src="http://js.users.51.la/17856605.js"></script>
+	&copy; 2016 All Rights Reserved. <font color="#0080FF">蓝色小导航 - 草榴小导航 - 各大网站最新地址 </font>版权所有 - <font color="#FF0000"><script language="javascript" type="text/javascript" src="http://js.users.51.la/17856605.js"></script>
 <noscript><a href="http://www.51.la/?17856605" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/17856605.asp" style="border:none" /></a></noscript></font><br>
 	</p>
 </div></body>
