--- a/index.html
+++ b/index.html
@@ -171,9 +171,10 @@
                             <li><a href="http://www.semmdh.com/" target="_blank">色妹妹导航</a></li>
                             <li><a href="http://lvjiabai1.info/" target="_blank">绿加白导航</a></li>
                             <li><a href="http://www.avsedh.net/" target="_blank">AV色导航</a></li>
+                            <li><a href="http://www.sechungege.com/" target="_blank">色春阁导航</a></li>
                             <li><a href="http://a4v5.net/" target="_blank">良友导航</a></li>
                             <li><a href="http://www.dccwl.com/" target="_blank">色慰导航</a></li>
-							<li><a href="http://dh.hfuli.com/" target="_blank">H福利导航</a></li>
+							<li><a href="http://www.yaoavdh.com/" target="_blank">要AV导航</a></li>
 							<li><a href="http://av7111.com" target="_blank">老司机福利导航</a></li>
 							<li><a href="http://www.fulisao.net/" target="_blank">福利嫂宅男导航</a></li>
 							<li><a href="http://www.yikudh.cc/" target="_blank">一库福利导航</a></li>
@@ -182,6 +183,8 @@
                             <li><a href="http://avcccc.com/" target="_blank">AVcccc导航</a></li>
                             <li><a href="http://dh.19xa.com/" target="_blank">福利导航</a></li>
                             <li><a href="http://www.fulidg.cc/" target="_blank">福利帝国導航</a></li>
+                            <li><a href="http://dh.hfuli.com/" target="_blank">H福利导航</a></li>
+                            <li><a href="http://www.avsedh.net/" target="_blank">AV色导航</a></li>
 				    </ul>
 		</div>
 		</div>
@@ -193,30 +196,30 @@
 		<ul>
 <li><a href="http://go.60990.biz/" target="_blank">蝌蚪窝</a></li>
 <li><a href="http://87all.com/" target="_blank">87视频</a></li>
-<li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
 <li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
 <li><a href="http://www.91av.club/" target="_blank">91AV俱乐部</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
 <li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
 <li><a href="http://www.yyaiav.com/" target="_blank">夜夜爱AV</a></li>
 <li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
-<li><a href="http://www.uuszy.com/" target="_blank">悠色资源网</a></li>
-<li><a href="http://v2momo.com/" target="_blank">V2视频</a></li>
-<li><a href="http://d8spad.com/" target="_blank">D8视频</a></li>
-<li><a href="http://www.56ava.com/" target="_blank">桃花岛</a></li>
 <li><a href="http://www.56avs.com/" target="_blank">沃流视频</a></li>
 <li><a href="http://www.fx1200.com/" target="_blank">咪咪影院</a></li>
-<li><a href="http://www.dashuav.com/" target="_blank">大叔AV站</a></li>
 <li><a href="http://www.lyfav.com/" target="_blank">撸一发av</a></li>
 <li><a href="http://avlu99.com/" target="_blank">撸啊撸</a></li>
-<li><a href="http://www.99zzpp.com/" target="_blank">99自拍</a></li>
 <li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
 <li><a href="http://www.db66.cc/" target="_blank">AV在线视频</a></li>
 <li><a href="http://www.912hh.com/" target="_blank">就要爱912</a></li>
+<li><a href="http://www.dashuav.com/" target="_blank">大叔AV站</a></li>
 <li><a href="http://qisevd.com/" target="_blank">奇色视频</a></li>
 <li><a href="http://www.bensexo.com/" target="_blank">本色视频</a></li>
 <li><a href="http://www.yese1024.com/" target="_blank">夜色视频</a></li>
 <li><a href="http://www.chunsesp.com/" target="_blank">春色视频</a></li>
+<li><a href="http://www.uuszy.com/" target="_blank">悠色资源网</a></li>
+<li><a href="http://www.56ava.com/" target="_blank">桃花岛</a></li>
+<li><a href="http://v2momo.com/" target="_blank">V2视频</a></li>
+<li><a href="http://d8spad.com/" target="_blank">D8视频</a></li>
+<li><a href="http://www.99zzpp.com/" target="_blank">99自拍</a></li>
+<li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
 <li><a href="http://www.henlupao.com/" target="_blank">狠撸炮</a></li>
 <li><a href="http://www.avlezi.com/" target="_blank">AV乐子</a></li>
 <li><a href="http://www.av0769.com/" target="_blank">东莞av</a></li>
@@ -225,6 +228,8 @@
 <li><a href="http://www.avsuo.com/" target="_blank">AVSUO在线</a></li>
 <li><a href="http://www.156meimei.com/" target="_blank">小娘子在线</a></li>
 <li><a href="http://www.yunav1.xyz/" target="_blank">AV云</a></li>
+<li><a href="http://www.999zaixian.com/" target="_blank">久久碰</a></li>
+<li><a href="http://www.avzxsp.com/" target="_blank">AV超碰视频</a></li>
 <li><a href="http://www.meizyw.com/" target="_blank">mm资源网</a></li>
 <li><a href="http://www.avtb7.com/" target="_blank">AV淘宝</a></li>
 <li><a href="http://video169.com/" target="_blank">Sex169影城</a></li>
