--- a/index.html
+++ b/index.html
@@ -156,17 +156,18 @@
 		<ul>
                             <li><a href="https://www.doufuli.com/" target="_blank">豆福导航</a></li>
                             <li><a href="http://www.zhaoavdh.com" target="_blank">找AV导航</a></li>
+                            <li><a href="http://ailovedh.com/" target="_blank">大爱导航</a></li>
                             <li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
                             <li><a href="http://www.3031177.com/" target="_blank">通幽福利导航</a></li>
                             <li><a href="http://www.hhzjzz.com/" target="_blank">蜜汁福利导航</a></li>
                             <li><a href="http://www.xionzhan.com/" target="_blank">你懂得福利导航</a></li>
                             <li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
                             <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
-                            <li><a href="http://www.soavdh.com/" target="_blank">搜AV导航</a></li>
                             <li><a href="http://www.500dh.com/" target="_blank">500导航</a></li>
                             <li><a href="http://www.seevdo18.ga/" target="_blank">大人导航</a></li>
                             <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
-                            <li><a href="http://ailovedh.com/" target="_blank">大爱导航</a></li>
+                            <li><a href="http://www.chihandh.com/" target="_blank">痴汉导航</a></li>
+                            <li><a href="http://www.soavdh.com/" target="_blank">搜AV导航</a></li>
                             <li><a href="http://www.lw78.cc/" target="_blank">老王福利导航</a></li>
                             <li><a href="http://www.semmdh.com/" target="_blank">色妹妹导航</a></li>
                             <li><a href="http://lvjiabai1.info/" target="_blank">绿加白导航</a></li>
@@ -202,6 +203,7 @@
 <li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
 <li><a href="http://www.yyaiav.com/" target="_blank">夜夜爱AV</a></li>
 <li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
+<li><a href="http://d8spad.com/" target="_blank">D8视频</a></li>
 <li><a href="http://www.56avs.com/" target="_blank">沃流视频</a></li>
 <li><a href="http://www.fx1200.com/" target="_blank">咪咪影院</a></li>
 <li><a href="http://www.lyfav.com/" target="_blank">撸一发av</a></li>
@@ -217,7 +219,6 @@
 <li><a href="http://www.uuszy.com/" target="_blank">悠色资源网</a></li>
 <li><a href="http://www.56ava.com/" target="_blank">桃花岛</a></li>
 <li><a href="http://v2momo.com/" target="_blank">V2视频</a></li>
-<li><a href="http://d8spad.com/" target="_blank">D8视频</a></li>
 <li><a href="http://www.99zzpp.com/" target="_blank">99自拍</a></li>
 <li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
 <li><a href="http://www.henlupao.com/" target="_blank">狠撸炮</a></li>
