--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
                             <li><a href="http://www.lw78.cc/" target="_blank">老王福利导航</a></li>
                             <li><a href="http://www.semmdh.com/" target="_blank">色妹妹导航</a></li>
                             <li><a href="http://lvjiabai1.info/" target="_blank">绿加白导航</a></li>
-                            <li><a href="http://www.avsedh.net/" target="_blank">AV色导航</a></li>
                             <li><a href="http://www.sechungege.com/" target="_blank">色春阁导航</a></li>
+                            <li><a href="http://www.666k6.com/" target="_blank">666福利导航</a></li>
                             <li><a href="http://a4v5.net/" target="_blank">良友导航</a></li>
                             <li><a href="http://www.dccwl.com/" target="_blank">色慰导航</a></li>
 							<li><a href="http://www.yaoavdh.com/" target="_blank">要AV导航</a></li>
@@ -182,10 +182,10 @@
 							<li><a href="http://www.gvgvdh.com/" target="_blank">GVGV导航</a></li>
 							<li><a href="http://www.caoluotuo.com/" target="_blank">草骆驼福利导航</a></li>
                             <li><a href="http://avcccc.com/" target="_blank">AVcccc导航</a></li>
+                            <li><a href="http://www.avsedh.net/" target="_blank">AV色导航</a></li>
                             <li><a href="http://dh.19xa.com/" target="_blank">福利导航</a></li>
                             <li><a href="http://www.fulidg.cc/" target="_blank">福利帝国導航</a></li>
-                            <li><a href="http://dh.hfuli.com/" target="_blank">H福利导航</a></li>
-                            <li><a href="http://www.avsedh.net/" target="_blank">AV色导航</a></li>
+                            <li><a href="http://dh.hfuli.com/" target="_blank">H福利导航</a></li>                            
 				    </ul>
 		</div>
 		</div>
@@ -210,7 +210,7 @@
 <li><a href="http://avlu99.com/" target="_blank">撸啊撸</a></li>
 <li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
 <li><a href="http://www.db66.cc/" target="_blank">AV在线视频</a></li>
-<li><a href="http://www.912hh.com/" target="_blank">就要爱912</a></li>
+<li><a href="http://www.912hh.com/" target="_blank">912在线AV</a></li>
 <li><a href="http://www.dashuav.com/" target="_blank">大叔AV站</a></li>
 <li><a href="http://qisevd.com/" target="_blank">奇色视频</a></li>
 <li><a href="http://www.bensexo.com/" target="_blank">本色视频</a></li>
@@ -227,10 +227,8 @@
 <li><a href="http://souav111.com/" target="_blank">搜AV视频</a></li>
 <li><a href="http://www.51luav.com/" target="_blank">51撸AV在线</a></li>
 <li><a href="http://www.avsuo.com/" target="_blank">AVSUO在线</a></li>
-<li><a href="http://www.156meimei.com/" target="_blank">小娘子在线</a></li>
 <li><a href="http://www.yunav1.xyz/" target="_blank">AV云</a></li>
 <li><a href="http://www.999zaixian.com/" target="_blank">久久碰</a></li>
-<li><a href="http://www.avzxsp.com/" target="_blank">AV超碰视频</a></li>
 <li><a href="http://www.meizyw.com/" target="_blank">mm资源网</a></li>
 <li><a href="http://www.avtb7.com/" target="_blank">AV淘宝</a></li>
 <li><a href="http://video169.com/" target="_blank">Sex169影城</a></li>
@@ -418,6 +416,7 @@
 <li><a href="http://iywzd.net/bbs/?fromuid=574073" target="_blank">欲望都市</a></li>
 <li><a href="http://www.39ye.com/?fromuid=54648" target="_blank">爱妻俱乐部</a></li>
 <li><a href="http://192.161.172.130/forum.php?fromuid=3479" target="_blank">欢乐夫妻</a></li>
+<li><a href="http://www.weipaipapa.com/" target="_blank">微拍啪啪</a></li>
 <li><a href="http://sezhan.net/" target="_blank">微拍视频</a></li>
 <li><a href="http://www.weipaiwang.cc/" target="_blank">微拍网</a></li>
 <li><a href="http://52weipai.net/" target="_blank">我爱微拍网</a></li>
