--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 		</div>
 								<div class="link">
 		 <div class="linka">
-		<strong><a name="/4/">导航网站</a></strong><strong style="padding:0 185px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">发送任意邮件到<font color="#7CFC00">dizhi66@gmail.com</font>，自动回复蓝色小导航最新地址</strong>
+		<strong><a name="/4/">导航网站</a></strong><strong style="padding:0 185px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">发送任意邮件到<font color="#7CFC00">6dizhi@gmail.com</font>，自动回复蓝色小导航最新地址</strong>
 		<div class="linkl">
 		<ul>
                             <li><a href="https://www.doufuli.com/" target="_blank">豆福导航</a></li>
