--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
                             <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
                             <li><a href="http://www.chihandh.com/" target="_blank">痴汉导航</a></li>
                             <li><a href="http://www.soavdh.com/" target="_blank">搜AV导航</a></li>
+                            <li><a href="http://nimadaohang.com/" target="_blank">尼玛导航</a></li>
                             <li><a href="http://www.lw78.cc/" target="_blank">老王福利导航</a></li>
                             <li><a href="http://www.semmdh.com/" target="_blank">色妹妹导航</a></li>
                             <li><a href="http://lvjiabai1.info/" target="_blank">绿加白导航</a></li>
@@ -182,7 +183,6 @@
 							<li><a href="http://www.gvgvdh.com/" target="_blank">GVGV导航</a></li>
 							<li><a href="http://www.caoluotuo.com/" target="_blank">草骆驼福利导航</a></li>
                             <li><a href="http://avcccc.com/" target="_blank">AVcccc导航</a></li>
-                            <li><a href="http://www.avsedh.net/" target="_blank">AV色导航</a></li>
                             <li><a href="http://dh.19xa.com/" target="_blank">福利导航</a></li>
                             <li><a href="http://www.fulidg.cc/" target="_blank">福利帝国導航</a></li>
                             <li><a href="http://dh.hfuli.com/" target="_blank">H福利导航</a></li>                            
