--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@
                             <li><a href="http://lvjiabai1.info/" target="_blank">绿加白导航</a></li>
                             <li><a href="http://www.sechungege.com/" target="_blank">色春阁导航</a></li>
                             <li><a href="http://www.666k6.com/" target="_blank">666福利导航</a></li>
-                            <li><a href="http://a4v5.net/" target="_blank">良友导航</a></li>
+                            <li><a href="http://www.jijidh.com/" target="_blank">吉吉导航</a></li>
+                            <li><a href="http://www.qiqidh.com/" target="_blank">琪琪导航</a></li>
                             <li><a href="http://www.dccwl.com/" target="_blank">色慰导航</a></li>
 							<li><a href="http://www.yaoavdh.com/" target="_blank">要AV导航</a></li>
-							<li><a href="http://av7111.com" target="_blank">老司机福利导航</a></li>
 							<li><a href="http://www.fulisao.net/" target="_blank">福利嫂宅男导航</a></li>
 							<li><a href="http://www.yikudh.cc/" target="_blank">一库福利导航</a></li>
 							<li><a href="http://www.gvgvdh.com/" target="_blank">GVGV导航</a></li>
