--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
                             <li><a href="http://avcccc.com/" target="_blank">AVcccc导航</a></li>
                             <li><a href="http://dh.19xa.com/" target="_blank">福利导航</a></li>
                             <li><a href="http://www.fulidg.cc/" target="_blank">福利帝国導航</a></li>
-                            <li><a href="http://dh.hfuli.com/" target="_blank">H福利导航</a></li>                            
+                            <li><a href="http://dh.hfuli.com/" target="_blank">H福利导航</a></li>
+                            <li><a href="http://att12.com/" target="_blank">A天堂导航</a></li>                            
 				    </ul>
 		</div>
 		</div>
