--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
                             <li><a href="http://www.fulidg.cc/" target="_blank">福利帝国導航</a></li>
                             <li><a href="http://dh.hfuli.com/" target="_blank">H福利导航</a></li>
                             <li><a href="http://att12.com/" target="_blank">A天堂导航</a></li>
-                            <li><a href="http://www.fulisuo2.com/" target="_blank">福利所</a></li>                            
+                            <li><a href="http://www.fulisuo2.com/" target="_blank">福利所</a></li>
+                            <li><a href="http://www.cjgdh.net/" target="_blank">藏姬阁导航</a></li>                           
 				    </ul>
 		</div>
 		</div>
@@ -434,7 +435,6 @@
 <li><a href="http://192.161.172.132/?u=465979" target="_blank">买春堂</a></li>
 <li><a href="http://184.164.72.170/?u=430488" target="_blank">红河谷</a></li>
 <li><a href="http://www.2ni.me/" target="_blank">恋恋影视</a></li>
-<li><a href="http://www.tvbbq.com/" target="_blank">TvBBQ</a></li>
 <li><a href="https://chaturbate.com/" target="_blank">Chaturbate</a></li>
 <li><a href="http://www.tnaflixcams.com/" target="_blank">tnaflixcams</a></li>
 <li><a href="http://pinkcams.com/" target="_blank">Pink cams</a></li>
