--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <li><a href="http://x77820.net/bbs/" target="_blank">Xiao77</a></li>
 <li><a href="http://174.127.195.187/bbs/index.php" target="_blank">色中色</a></li>
 <li><a href="http://104.194.212.12/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
-<li><a href="http://jo1.host8.info/index.php?u=1096417" target="_blank">性吧春暖花开</a></li>
+<li><a href="http://se8girl.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
 <li><a href="http://62.210.209.113/?fromuid=73855" target="_blank">天空论坛</a></li>
 <li><a href="http://www.sineed18.info/?fromuid=72524" target="_blank">任我睇</a></li>
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
@@ -79,7 +79,7 @@
 <li><a href="http://goxav.cf/?fromuid=1382595" target="_blank">XIAAV论坛</a></li>
 <li><a href="http://www.playno1.com/?fromuid=284114" target="_blank">PLAYNO.1</a></li>
 <li><a href="http://aixxbbs.net/?fromuid=1199668" target="_blank">九爱城社区</a></li>
-<li><a href="http://www.mayaback.com/index.php" target="_blank">玛雅网</a></li>
+<li><a href="http://www.mayahaus.com/index.php" target="_blank">玛雅网</a></li>
 <li><a href="http://provider.icargo.org/?fromuid=153059" target="_blank">桃隐社区</a></li>
 <li><a href="http://www.avlang7.info/index.php?a=3886" target="_blank">AV狼</a></li>
 <li><a href="http://www.mihk.hk/forum/index.php" target="_blank">香港製造論壇</a></li>
@@ -137,7 +137,7 @@
 <li><a href="http://www.amay.tv/forum.php" target="_blank">阿玫圖庫</a></li>
 <li><a href="http://www.91szs.com/" target="_blank">91涩中涩</a></li>
 <li><a href="http://aa2n.com/" target="_blank">三涩论坛</a></li>
-<li><a href="http://taohuahd.com/?fromuid=70941" target="_blank">桃花族</a></li>
+<li><a href="http://thzbt.biz/?fromuid=70941" target="_blank">桃花族</a></li>
 <li><a href="http://girlclub8.com/?fromuid=1096417" target="_blank">杏吧有你</a></li>
 <li><a href="http://cl.rfbfp.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
 <li><a href="http://hjkjh.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
@@ -155,7 +155,7 @@
 		<div class="linkl">
 		<ul>
                             <li><a href="https://www.doufuli.com/" target="_blank">豆福导航</a></li>
-                            <li><a href="http://www.zhaoavdh.com" target="_blank">找AV导航</a></li>
+                            <li><a href="http://www.zhaoavdh.net/" target="_blank">找AV导航</a></li>
                             <li><a href="http://ailovedh.com/" target="_blank">大爱导航</a></li>
                             <li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
                             <li><a href="http://www.3031177.com/" target="_blank">通幽福利导航</a></li>
@@ -201,6 +201,7 @@
 <li><a href="http://go.60990.biz/" target="_blank">蝌蚪窝</a></li>
 <li><a href="http://87all.com/" target="_blank">87视频</a></li>
 <li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
+<li><a href="http://www.7u8e.com/" target="_blank">7菇8姨</a></li>
 <li><a href="http://www.91av.club/" target="_blank">91AV俱乐部</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
 <li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
@@ -238,7 +239,7 @@
 <li><a href="http://uu9090.net/" target="_blank">18AV</a></li>
 <li><a href="http://www.5xsq123.com/" target="_blank">5X社区</a></li>
 <li><a href="http://www.yeshemao520.top/" target="_blank">夜涩猫</a></li>
-<li><a href="http://www.99qq9.com/" target="_blank">久久热视频</a></li>
+<li><a href="http://www.99ww8.com/" target="_blank">久久热视频</a></li>
 <li><a href="http://www.rxl365.com/" target="_blank">任性撸</a></li>
 <li><a href="http://didimeimei.top/cao" target="_blank">CaoPorn</a></li>
 <li><a href="http://www.avaotu.com/" target="_blank">凹凸视频</a></li>
@@ -348,7 +349,7 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://198.40.52.155/?fromuid=428789" target="_blank">偷窥客</a></li>
-<li><a href="http://www.ivnext.xyz/" target="_blank">少女写真论坛</a></li>
+<li><a href="http://www.ivnext.top/" target="_blank">少女写真论坛</a></li>
 <li><a href="http://192.186.31.86/?fromuid=34160" target="_blank">WC俱乐部</a></li>
 <li><a href="http://www.521yw.com/?fromuid=13485" target="_blank">我要原味</a></li>
 <li><a href="http://www.52yuanwei.club/?fromuid=190756" target="_blank">我爱原味网</a></li>
@@ -495,7 +496,7 @@
 		<strong><a name="/11/">島國情报</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="http://j9lib.com/cn/" target="_blank">JavLibrary</a></li>
+<li><a href="http://www.javl10.com/cn/" target="_blank">JavLibrary</a></li>
 <li><a href="https://www.javbus.info/" target="_blank">JavBus</a></li>
 <li><a href="http://www.uggdiy.com/" target="_blank">求番号吧</a></li>
 <li><a href="http://www.141jav.com/" target="_blank">141jav</a></li>
@@ -562,7 +563,7 @@
 		<strong><a name="/13/">VR资源</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="http://www.daoguovr.net/?fromuid=22908" target="_blank">岛国VR网</a></li>
+<li><a href="http://www.daoguovr.cc/?fromuid=22908" target="_blank">岛国VR网</a></li>
 <li><a href="http://vrporn.com/" target="_blank">VRPorn</a></li>
 <li><a href="https://www.sexlikereal.com/" target="_blank">SexLikeReal</a></li>
 <li><a href="http://www.trannypornvr.com/" target="_blank">Tranny Porn VR</a></li>
