--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 <li><a href="http://bbs.north-plus.net/" target="_blank">North Plus</a></li>
 <li><a href="http://www.xxshe.com/" target="_blank">和邪社</a></li>
 <li><a href="http://www.erojima2.com/" target="_blank">魁!!同人塾</a></li>
-<li><a href="http://www.177pic66.com/" target="_blank">177漫畫</a></li>
+<li><a href="http://www.177picxx.info/" target="_blank">177漫畫</a></li>
 <li><a href="https://www.acg.tf/" target="_blank">绅士二次元</a></li>
 <li><a href="https://www.htai.me/" target="_blank">绅士图书馆</a></li>
 <li><a href="http://hentai4daily.com/" target="_blank">Hentai4Daily</a></li>
