--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <li><a href="http://catcatforum.com/?fromuid=3045850" target="_blank">貓貓論壇</a></li>
 <li><a href="http://bbs.gogo.la/" target="_blank">高高啦討論區</a></li>
 <li><a href="http://bbs.sex169.biz/?fromuid=141932" target="_blank">SEX169 論壇</a></li>
-<li><a href="http://www.mmvrs.com/" target="_blank">咪咪爱</a></li>
+<li><a href="http://www.p2plol.com/" target="_blank">咪咪爱</a></li>
 <li><a href="http://www.naluone-at.com/forum/index.php" target="_blank">娜鲁湾论坛</a></li>
 <li><a href="http://wuso.me/?fromuid=10995" target="_blank">屋受論壇</a></li>
 <li><a href="http://dio88.net/?fromuid=2077160" target="_blank">魔王の家</a></li>
@@ -123,7 +123,7 @@
 <li><a href="https://bbs.caoav.net/?fromuid=29070" target="_blank">CaoAV社区</a></li>
 <li><a href="http://www.99rebbs5.com/?fromuid=4521" target="_blank">久久热论坛</a></li>
 <li><a href="http://www.youbbbs.org/?fromuid=65678" target="_blank">有B吗？</a></li>
-<li><a href="http://hkbbcc.com/forum.php?fromuid=3234239" target="_blank">比思论坛</a></li>
+<li><a href="http://198.15.119.146/forum.php?fromuid=3234239" target="_blank">比思论坛</a></li>
 <li><a href="http://bbx169.com/?fromuid=1010710" target="_blank">百姓阁</a></li>
 <li><a href="http://ttlbbs.net/?fromuid=3952405" target="_blank">桃太狼</a></li>
 <li><a href="http://ooxx9.net/?fromuid=549063" target="_blank">OOXX论坛</a></li>
@@ -199,7 +199,7 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://go.60990.biz/" target="_blank">蝌蚪窝</a></li>
-<li><a href="http://87all.com/" target="_blank">87视频</a></li>
+<li><a href="http://87act.com/" target="_blank">87视频</a></li>
 <li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
 <li><a href="http://www.7u8e.com/" target="_blank">7菇8姨</a></li>
 <li><a href="http://www.91av.club/" target="_blank">91AV俱乐部</a></li>
@@ -207,7 +207,7 @@
 <li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
 <li><a href="http://www.yyaiav.com/" target="_blank">夜夜爱AV</a></li>
 <li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
-<li><a href="http://d8spad.com/" target="_blank">D8视频</a></li>
+<li><a href="http://wulid8.com/" target="_blank">D8视频</a></li>
 <li><a href="http://www.56avs.com/" target="_blank">沃流视频</a></li>
 <li><a href="http://www.fx1200.com/" target="_blank">咪咪影院</a></li>
 <li><a href="http://www.lyfav.com/" target="_blank">撸一发av</a></li>
@@ -234,7 +234,7 @@
 <li><a href="http://www.yunav1.xyz/" target="_blank">AV云</a></li>
 <li><a href="http://www.999zaixian.com/" target="_blank">久久碰</a></li>
 <li><a href="http://www.meizyw.com/" target="_blank">mm资源网</a></li>
-<li><a href="http://www.avtb7.com/" target="_blank">AV淘宝</a></li>
+<li><a href="http://www.avtb8.com/" target="_blank">AV淘宝</a></li>
 <li><a href="http://video169.com/" target="_blank">Sex169影城</a></li>
 <li><a href="http://uu9090.net/" target="_blank">18AV</a></li>
 <li><a href="http://www.5xsq123.com/" target="_blank">5X社区</a></li>
@@ -259,9 +259,9 @@
 <li><a href="http://www.vid999.com/" target="_blank">vid999</a></li>
 <li><a href="http://www.600zyz.com/" target="_blank">97资源站</a></li>
 <li><a href="http://www.299gao.com/" target="_blank">妞干网</a></li>
-<li><a href="http://www.avtai.org/" target="_blank">AvTai</a></li>
+<li><a href="http://www.avtai3.com/" target="_blank">AvTai</a></li>
 <li><a href="http://ixxzy.com/" target="_blank">ixxzy</a></li>
-<li><a href="http://www.youb77.com/" target="_blank">有B吗？</a></li>
+<li><a href="http://www.youppp.com/" target="_blank">有B吗？</a></li>
 <li><a href="http://www.av8d.co/" target="_blank">琪琪涩原</a></li>
 <li><a href="http://www.777vid.com/" target="_blank">PLAY 视频</a></li>
 <li><a href="http://www.jiuseteng.net/" target="_blank">九涩腾</a></li>
@@ -435,7 +435,7 @@
 <li><a href="http://www.xyj2014.com/?fromuid=118049" target="_blank">西友记</a></li>
 <li><a href="http://192.161.172.132/?u=465979" target="_blank">买春堂</a></li>
 <li><a href="http://184.164.72.170/?u=430488" target="_blank">红河谷</a></li>
-<li><a href="http://www.2ni.me/" target="_blank">恋恋影视</a></li>
+<li><a href="http://www.2ni.la/" target="_blank">恋恋影视</a></li>
 <li><a href="https://chaturbate.com/" target="_blank">Chaturbate</a></li>
 <li><a href="http://www.tnaflixcams.com/" target="_blank">tnaflixcams</a></li>
 <li><a href="http://pinkcams.com/" target="_blank">Pink cams</a></li>
@@ -627,7 +627,6 @@
 <li><a href="http://imagezog.com/" target="_blank">ImageZog</a></li>
 <li><a href="http://www.spidergif.com/" target="_blank">SPIDER</a></li>
 <li><a href="http://xxgifs.com/" target="_blank">xxGifs</a></li>
-<li><a href="http://www.adult-gifs.com/" target="_blank">Adult-Gifs</a></li>
 <li><a href="http://www.jigglegifs.com/" target="_blank">JiggleGifs</a></li>
 <li><a href="http://www.porndao.net/" target="_blank">Porndao</a></li>
 <li><a href="http://www.pichunter.com/" target="_blank">Pichunter</a></li>
@@ -687,7 +686,6 @@
 <li><a href="https://tpb.dashitz.com/" target="_blank">TPB</a></li>
 <li><a href="http://torrentcrazy.to/" target="_blank">Torrent Crazy</a></li>
 <li><a href="https://www.torrentkitty.tv/search/" target="_blank">Torrentkitty</a></li>
-<li><a href="http://torrentreactor.com/" target="_blank">TorrentReactor</a></li>
 <li><a href="http://torrentz.eu/" target="_blank">Torrentz</a></li>
 <li><a href="http://www.gamestorrents.com/" target="_blank">GamesTorrents</a></li>
 <li><a href="http://www.sumotorrent.sx/" target="_blank">SUMOTorrent</a></li>
@@ -708,7 +706,7 @@
 <li><a href="http://www.btmon.com/" target="_blank">BTMon</a></li>
 <li><a href="http://www.tokyotosho.info/" target="_blank">Tokyo Toshokan</a></li>
 <li><a href="http://torrent.sex169.biz/" target="_blank">SEX169 種子站</a></li>
-<li><a href="http://22ttbt.com/" target="_blank">图图BT</a></li>
+<li><a href="http://22ttbt.com/" target="_blank">图图资源</a></li>
 <li><a href="http://bt.gg/" target="_blank">短磁链</a></li>
 <li><a href="https://btdb.in/" target="_blank">BTDB</a></li>
 <li><a href="http://www.cilibaba.com/" target="_blank">CiLiBaBa</a></li>
