--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
                             <li><a href="http://dh.hfuli.com/" target="_blank">H福利导航</a></li>
                             <li><a href="http://att12.com/" target="_blank">A天堂导航</a></li>
                             <li><a href="http://www.fulisuo2.com/" target="_blank">福利所</a></li>
-                            <li><a href="http://www.cjgdh.net/" target="_blank">藏姬阁导航</a></li>                           
+                            <li><a href="http://www.cjgdh.net/" target="_blank">藏姬阁导航</a></li>
+                            <li><a href="http://www.52avdh.com/" target="_blank">52AV导航</a></li>                           
 				    </ul>
 		</div>
 		</div>
