--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
                             <li><a href="http://www.500dh.com/" target="_blank">500导航</a></li>
                             <li><a href="http://www.seevdo18.ga/" target="_blank">大人导航</a></li>
                             <li><a href="http://www.caoliufabu.com/" target="_blank">草榴发布页</a></li>
+                            <li><a href="http://www.776dh.com/" target="_blank">776福利导航</a></li>
                             <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
                             <li><a href="http://www.chihandh.com/" target="_blank">痴汉导航</a></li>
                             <li><a href="http://www.soavdh.com/" target="_blank">搜AV导航</a></li>
