--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
                             <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
                             <li><a href="http://www.500dh.com/" target="_blank">500导航</a></li>
                             <li><a href="http://www.seevdo18.ga/" target="_blank">大人导航</a></li>
+                            <li><a href="http://www.52avdh.com/" target="_blank">52AV导航</a></li>
                             <li><a href="http://www.caoliufabu.com/" target="_blank">草榴发布页</a></li>
                             <li><a href="http://www.776dh.com/" target="_blank">776福利导航</a></li>
                             <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
@@ -181,6 +182,8 @@
 							<li><a href="http://www.yaoavdh.com/" target="_blank">要AV导航</a></li>
 							<li><a href="http://www.fulisao.net/" target="_blank">福利嫂宅男导航</a></li>
 							<li><a href="http://www.yikudh.cc/" target="_blank">一库福利导航</a></li>
+                            <li><a href="http://69dh.top/" target="_blank">69宅男福利导航</a></li>
+                            <li><a href="https://www.gavdh.com/" target="_blank">GAV福利导航</a></li>
 							<li><a href="http://www.gvgvdh.com/" target="_blank">GVGV导航</a></li>
 							<li><a href="http://www.caoluotuo.com/" target="_blank">草骆驼福利导航</a></li>
                             <li><a href="http://avcccc.com/" target="_blank">AVcccc导航</a></li>
@@ -189,8 +192,7 @@
                             <li><a href="http://dh.hfuli.com/" target="_blank">H福利导航</a></li>
                             <li><a href="http://att12.com/" target="_blank">A天堂导航</a></li>
                             <li><a href="http://www.fulisuo2.com/" target="_blank">福利所</a></li>
-                            <li><a href="http://www.cjgdh.net/" target="_blank">藏姬阁导航</a></li>
-                            <li><a href="http://www.52avdh.com/" target="_blank">52AV导航</a></li>                           
+                            <li><a href="http://www.cjgdh.net/" target="_blank">藏姬阁导航</a></li>                          
 				    </ul>
 		</div>
 		</div>
@@ -603,6 +605,7 @@
 <li><a href="http://www.bzjkzc.com/" target="_blank">福利gif出处</a></li>
 <li><a href="http://www.bvfpei.com/" target="_blank">邪恶GIF</a></li>
 <li><a href="http://www.nucvrj.com/" target="_blank">美女生活照</a></li>
+<li><a href="http://www.ixieegif.com/" target="_blank">哆乐动图</a></li>
 <li><a href="http://www.lu46.com/?fromuid=82145" target="_blank">街拍帮</a></li>
 <li><a href="http://www.jp95.com/?fromuid=672975" target="_blank">街拍第一站</a></li>
 <li><a href="http://www.kacajp.com/?fromuid=12755" target="_blank">喀嚓街拍网</a></li>
