--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 238px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">蓝色小导航最新地址：<a href="http://dear.gq" target="_blank"><span style="color:#2bf7c0;">dear.gq</span></a> <a href="http://boat.ml" target="_blank"><span style="color:#2bf7c0;">boat.ml</span></a> <a href="http://party.gq" target="_blank"><span style="color:#2bf7c0;">party.gq</span></a></strong> 
 		<div class="linkl">
 		<ul>
-<li><a href="http://cl.dicool.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
+<li><a href="http://cl.gtcool.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
 <li><a href="http://papageo.net/?fromuid=8" target="_blank">啪啪社区</a></li>
 <li><a href="http://th47.net/?fromuid=5495" target="_blank">淘花社区</a></li>
 <li><a href="http://lovecityclub.com/bt/?u=701541" target="_blank">爱城</a></li>
@@ -192,6 +192,7 @@
                             <li><a href="http://dh.hfuli.com/" target="_blank">H福利导航</a></li>
                             <li><a href="http://att12.com/" target="_blank">A天堂导航</a></li>
                             <li><a href="http://www.fulisuo2.com/" target="_blank">福利所</a></li>
+                            <li><a href="http://www.sndh8.com/" target="_blank">骚男福利导航</a></li>
                             <li><a href="http://www.cjgdh.net/" target="_blank">藏姬阁导航</a></li>                          
 				    </ul>
 		</div>
@@ -301,6 +302,7 @@
 <li><a href="http://zbporn.com/" target="_blank">ZBPORN</a></li>
 <li><a href="http://www.tub99.com/" target="_blank">TUB99</a></li>
 <li><a href="http://www.seemyporn.com/" target="_blank">SeeMyPorn</a></li>
+<li><a href="http://www.xvideos.com/" target="_blank">XVIDEOS</a></li>
 <li><a href="http://www.blacksexfuckingvideos.com/" target="_blank">BlackSex</a></li>
 <li><a href="http://www.hoodamateurs.com/" target="_blank">HOOD AMATEURS</a></li>
 <li><a href="http://www.freejizzvideos.com/" target="_blank">Free Jizz</a></li>
@@ -401,6 +403,7 @@
 <li><a href="https://www.acg.tf/" target="_blank">绅士二次元</a></li>
 <li><a href="https://www.htai.me/" target="_blank">绅士图书馆</a></li>
 <li><a href="http://hentai4daily.com/" target="_blank">Hentai4Daily</a></li>
+<li><a href="http://league-of-hentai.com/" target="_blank">League of Hentai</a></li>
 <li><a href="http://www.ahri8.com/" target="_blank">松鼠症倉庫</a></li>
 <li><a href="http://hentaiplay.net/" target="_blank">hentaiplay</a></li>
 <li><a href="http://erolord.com/" target="_blank">Hentai online</a></li>
@@ -653,7 +656,7 @@
 <li><a href="http://radikal.ru/" target="_blank">Radikal</a></li>
 <li><a href="http://imgbox.com/" target="_blank">Imgbox</a></li>
 <li><a href="http://www.photobucket.com/" target="_blank">Photobucket</a></li>
-<li><a href="http://minus.com/" target="_blank">Minus</a></li>
+<li><a href="http://www.qpic.ws/" target="_blank">qpic</a></li>
 <li><a href="http://www.ultraimg.com/" target="_blank">UltraIMG</a></li>
 <li><a href="http://www.tuzhan.com/" target="_blank">图展</a></li>
 <li><a href="http://www.niupic.com/" target="_blank">牛图网</a></li>
@@ -719,7 +722,7 @@
 <li><a href="http://www.ciliwo.com/" target="_blank">磁力窝</a></li>
 <li><a href="http://www.cilihome.com/" target="_blank">磁力之家</a></li>
 <li><a href="http://www.yunbosou.cc/" target="_blank">云播搜</a></li>
-<li><a href="http://www.breadsearch.com/" target="_blank">面包搜索</a></li>
+<li><a href="http://www.btcherry.org/" target="_blank">BT樱桃</a></li>
 <li><a href="http://www.btkuaisou.cc/" target="_blank">BT快搜</a></li>
 <li><a href="http://bt588.cc/" target="_blank">BT588</a></li>
 <li><a href="http://www.9kbt.com/" target="_blank">BT1280</a></li>
